feat(login): finish user login
- spelling bug
`pubulic.t_users` -> `public.t_users`
