# model/login_model.go
@@ -1,0 +1,6 @@
+package model
+
+type LoginRequest struct {
+	UserName string `json:"username"`
+	PassWord string `json:"password"`
+}
